sinkを一次元で作ろうとしている d^2a/dx/dyの計算法を変更した

--- a/py/anim.ipynb
+++ b/py/anim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,11 +78,11 @@
     "    #plt.ylim(-0.005, 0.005)\n",
     "    \n",
     "    #data01,data02,data03,data04,data05,data06 = np.loadtxt(dir+'phi'+\"%05.f\"%(i)+'.dat', delimiter=',', unpack=True)\n",
-    "    data01,data02,data03,data04,data05,data06,data07,data08 = np.loadtxt(dirm+'phi'+\"%05.f\"%(i)+'.dat', delimiter=',', unpack=True)\n",
+    "    data01,data02,data03,data04,data05,data06,data07,data08,data09 = np.loadtxt(dirm+'phi'+\"%05.f\"%(i)+'.dat', delimiter=',', unpack=True)\n",
     "    #fata01,fata02,fata03,fata04,fata05 = np.loadtxt(dirn+'phiexa'+\"%03.f\"%(i)+'.dat', delimiter=',', unpack=True)\n",
     "    #image1 = plt.plot(data01,data02,marker=\"o\",color='blue', linewidth = 1) \n",
     "    #image1 = plt.plot(data01,(data02+data03)*0.5,marker=\"o\",color='blue', linewidth = 1) \n",
-    "    image2 = plt.plot(data01,data02,marker=\"o\",color='red', linewidth = 1) \n",
+    "    image2 = plt.plot(data01,data09,marker=\"o\",color='red', linewidth = 1) \n",
     "    image3 = plt.plot(data01,data04,marker=\"o\",color='green', linewidth = 1) \n",
     "    #image2 = plt.plot(fata01,fata05*2.0,marker=\"o\",color='red', linewidth = 1)  \n",
     "    #image4 = plt.plot(fata01,fata02,marker=\"o\",color='red', linewidth = 1) \n",
